# rune

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TESTING.md
.claude/skills/verify/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  release.yml  reproducibility.yml  stale.yml
app/: .gitignore  README.md  dart_test.yaml  pubspec.yaml
app/android/: key.properties.example
app/android/app/: build.gradle.kts
app/integration_test/: demo_main.dart  demo_seed.dart  screenshots_test.dart  shots_main.dart  whisper_transcription_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  app_version.g.dart  main.dart  theme.dart
app/lib/platform/: app_paths.dart  audio_recorder.dart  biometric_unlock_store.dart  transcription_factory.dart
app/lib/state/: app_controller.dart  app_scope.dart  app_settings.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugins.cmake
app/linux/runner/: my_application.cc
app/test/: app_controller_test.dart  app_settings_test.dart  biometric_unlock_store_test.dart  widget_test.dart
app/test_driver/: screenshot_driver.dart
app/tool/: configure_macos_signing.sh
app/windows/: CMakeLists.txt
docs/: SCREENSHOTS.md  reproducibility.md  transcription.md
docs/fdroid/: README.md  co.rorystandley.rune.yml
native/whisper/: CMakeLists.txt  rune_whisper_bridge.cc
tool/: gen_app_version.dart
tool/reproducibility/: build_release_apk.sh  build_twice.sh  compare_apks.py  prepare_android_reproducible_build.sh
tool/whisper/: build_android.sh  build_ios.sh  build_macos.sh  homebrew_path.sh
(+40 files in other folders)
